# golem

./: .gitignore  CHANGES.md  Cargo.toml  PLATFORMS.md  README.md
.github/workflows/: integration.yml
examples/: 3d_scene.rs  blend.rs  depth.rs  geometry.rs  hello-triangle.rs  image.rs  surfaces.rs
src/: attribute.rs  blend.rs  buffer.rs  context.rs  depth.rs  input.rs  lib.rs  objects.rs  program.rs  shader.rs  surface.rs  texture.rs  uniform.rs
