[package]
name = "golem"
version = "0.2.0-alpha0"
authors = ["Ryan Goldstein <ryan@ryanisaacg.com>"]
description = "A (mostly) safe library for graphics programming"
categories = ["game-development", "web-programming", "graphics"]
keywords = ["gl", "opengl", "webgl", "graphics",]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/ryanisaacg/golem"
readme = "README.md"

[dependencies]
bytemuck = "1"
glow = "0.16"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.web_sys]
version = "~0.3.60"
package = "web-sys"
features = [
  "WebGl2RenderingContext",
]

[dev-dependencies]
blinds = "0.3.0-alpha0"
nalgebra-glm = "0.7.0"
